6ingress/leaderboardapi-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: leaderboard-api
  namespace: ingressdemo
spec:  
  replicas: 2
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: leaderboardwebapi
        image: clouddemo.azurecr.io/leaderboardwebapi:457   
        ports:
        - containerPort: 80 
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 2
          timeoutSeconds: 1
          periodSeconds: 10 
          failureThreshold: 3    
        readinessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 2
          timeoutSeconds: 1
          periodSeconds: 10 
          failureThreshold: 3     
      imagePullSecrets:
      - name: clouddemoimages
