6ingress/DeployIngressNoSSL.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: allshare-ingress  
  annotations:   
    nginx.org/redirect-to-https: "false"
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/ssl-passthrough: "false"
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: nginx   
   # nginx.org/rewrites: "serviceName=kuard-service rewrite=/kuard/;serviceName=rabbitmq-rabbitmq rewrite=/rabbitmq/" 
    ingress.kubernetes.io/rewrite-target: /
    #ingress.kubernetes.io/add-base-url: "true"    
spec:
  rules:
  - http:
      paths:    
      - path: /eventstore
        backend:
          serviceName: eventstore-service
          servicePort: 2113
      - path: /rabbitmq
        backend:
          serviceName: rabbitmq-rabbitmq
          servicePort: 15672        
      - path: /kuard
        backend:
          serviceName: kuard-service
          servicePort: 8080        
      - path: /echoy
        backend:
          serviceName: echoheaders-y
          servicePort: 80
      - path: /echox
        backend:
          serviceName: echoheaders-x
          servicePort: 80
      - path: /sbus
        backend:
          serviceName: sbus-api-service
          servicePort: 80
