6ingress/gamingwebapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gamingwebapp-ingresscf
  namespace: ingressdemo
  annotations:        
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: gaming.intelligentcloud.cf
    http:
      paths:
      - backend:
          serviceName: gamingwebapp-service
          servicePort: 80
